# driver

./: CMakeLists.txt  driverConfig.cmake.in
CMake/: Findartdaq.cmake
include/artdaq/: FragmentGenerator.hpp  HDF5Output.hpp  json_to_fhicl.hpp
include/driver/: FragmentGenerator.hpp  HDF5Output.hpp  json_to_fhicl.hpp
scripts/: setup_ups.sh
src/: FragmentGenerator.cpp  HDF5Output.cpp
test/: driver.cxx  driver.json
